fix: set scrollbar gutter stable

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -2,6 +2,10 @@
 // Content
 //-------------------------------------------------------------------------------
 
+html {
+  scrollbar-gutter: stable;
+}
+
 a {
   color: #848d96;
   text-decoration: none;
